kubernetes/example/tcp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcp
  annotations:
    kubernetes.io/ingress.class: k8sniff
spec:
  defaultBackend:
    service:
      name: bar
      port:
        number: 443
  rules:
    - host: foo
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: foo
                port:
                  number: 443
    - host: bar
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: bar
                port:
                  number: 443
